Update documentation for billing, plans, limits, features, and troubleshooting; remove outdated creating forms guide

--- a/account/limits.mdx
+++ b/account/limits.mdx
@@ -1,5 +1,26 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Plan Limits"
+description: "Understand submission, form, and storage limits per plan"
 ---
 
+Each plan comes with specific limits to ensure fair use. Here's what you can expect:
+
+---
+
+## Limits Overview
+
+| Limit Type         | Free     | Starter   | Pro       |
+|--------------------|----------|-----------|-----------|
+| Forms              | 2        | Unlimited | Unlimited |
+| Submissions / mo   | 50       | 5,000     | 10,000    |
+| File Size (per file) | -      | 50 MB     | 100 MB    |
+
+---
+
+
+---
+
+##  Related
+
+- [Plans Overview](/account/plans)
+- [Billing](/account/billing)
