--- a/account/plans.mdx
+++ b/account/plans.mdx
@@ -1,5 +1,34 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Plans Overview"
+description: "Explore Heysheet pricing plans and features"
 ---
 
+Heysheet offers flexible pricing designed to grow with you. Whether you're just starting or scaling, we have a plan to match your needs.
+
+---
+
+## Available Plans
+
+| Plan     | Price (Monthly) | Best For                 |
+|----------|------------------|--------------------------|
+| Free     | $0              | Getting started          |
+| Starter  | $9/mo           | Growing businesses       |
+| Pro      | $24/mo          | Teams & advanced users   |
+
+---
+
+<img style={{borderRadius: '0.5rem'}} src="/images/pricing.png"/>
+
+---
+
+##  Recommended Plan
+
+- **Starter Plan** is the most popular for creators and startups.
+- **Pro Plan** is ideal for teams, larger projects, and integrations.
+
+---
+
+##  Related
+
+- [Plan Limits](/account/limits)
+- [Billing](/account/billing)
