--- a/features/analytics.mdx
+++ b/features/analytics.mdx
@@ -1,5 +1,23 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Analytics"
+description: "Track form submission trends and performance"
 ---
 
+
+See how your forms are performing with built-in basic analytics.
+
+---
+
+##  What You Can Track
+
+- Total submissions
+- Daily submission trends
+
+<img style={{borderRadius: '0.5rem'}} src="/images/analytics-dashboard.png"/>
+---
+
+
+
+##  Related
+
+- [Plans & Limits](../account/limits.md)
