--- a/features/branding.mdx
+++ b/features/branding.mdx
@@ -1,5 +1,34 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Branding"
+description: "Customize the look and feel of your form to match your brand"
 ---
 
+Make your form feel like yours. Heysheet allows you to brand your forms for a cohesive experience.
+
+---
+
+## 🧰 Customizable Elements
+
+- Logo (upload PNG/SVG)
+- Theme Colors
+- Button styles
+- Header and footer text
+
+📸 **Screenshot:** `form-branding-options.png`
+
+---
+
+## 🔒 Available on Plans
+
+| Feature           | Free | Starter | Pro |
+|-------------------|------|---------|-----|
+| Basic Branding    | ✅   | ✅      | ✅  |
+| Custom Colors     | ❌   | ✅      | ✅  |
+| Logo Upload       | ❌   | ✅      | ✅  |
+| Remove Heysheet Branding | ❌ | ❌ | ✅  |
+
+---
+
+## 📘 Related
+
+- [Form Builder](./form-builder.md)
