--- a/features/google-sheet-sync.mdx
+++ b/features/google-sheet-sync.mdx
@@ -1,5 +1,43 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Google Sheets Sync"
+description: "Sync your form responses directly to your Google Sheets"
 ---
+
+Automatically send form submissions to your connected Google Sheet in real-time.
+
+---
+
+##  How to Connect
+
+1. Click on **Connect Google Account** button
+2. Grant permission to connect Google Sheets
+
+<img style={{borderRadius: '0.5rem'}} src="/images/google-auth-connect.png"/>
+
+---
+
+##  What Gets Synced?
+
+Each submission creates a new row in the sheet with:
+
+- Field labels as column headers
+- Responses as values
+
+
+<img style={{borderRadius: '0.5rem'}} src="/images/google-sheet-output.png"/>
+
+---
+
+
+##  Notes
+
+- You must grant Google Sheets access once.
+- Data is written only to your connected sheet — Heysheet does not store submission data.
+
+---
+
+##  Related
+
+- [Quickstart](../getting-started/quickstart)
+- [Plans & Limits](../account/limits)
 
