--- a/help/troubleshooting.mdx
+++ b/help/troubleshooting.mdx
@@ -1,5 +1,66 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Troubleshooting"
+description: "Common issues and how to fix them in Heysheet"
 ---
 
+# 🛠 Troubleshooting
+
+Encountering issues while using Heysheet? Here are quick fixes for common problems.
+
+---
+
+## 1. Google Sheets not syncing
+
+If your form submissions aren't appearing in Google Sheets:
+
+- ✅ Ensure you've granted the required permissions to your Google account.
+- 🔄 Try disconnecting and reconnecting your Google Sheets integration.
+- 📄 Make sure your Google Sheet isn’t deleted or renamed after connecting.
+
+📸 **Screenshot:** `google-sync-error.png`
+
+---
+
+## 2. File upload not working
+
+- Free plan does **not** support file uploads.
+- Check your plan limits in the billing section.
+- Ensure files are within allowed size (50MB for Starter, 100MB for Pro).
+
+📸 **Screenshot:** `file-upload-error.png`
+
+---
+
+## 3. Form not saving
+
+- Ensure you’ve filled in all required fields.
+- Try clicking **Save** again.
+- Check your internet connection.
+- Look for any validation errors highlighted in red.
+
+---
+
+## 4. Submission limit reached
+
+If you hit your submission limit:
+
+- You’ll see a warning in the dashboard.
+- You can upgrade to unlock more submissions.
+
+📸 **Screenshot:** `submission-limit-reached.png`
+
+---
+
+## 5. Styling looks broken?
+
+Try these:
+
+- Hard refresh your browser (CMD/CTRL + Shift + R)
+- Clear cache
+- If issue persists, [contact support](mailto:hi@heysheet.com)
+
+---
+
+## 💬 Still Need Help?
+
+Email us at [hi@heysheet.com](mailto:hi@heysheet.com) — we’re happy to assist!
