--- a/index.mdx
+++ b/index.mdx
@@ -1,48 +1,44 @@
 ---
 title: "Introduction"
-description: "Welcome to the home of your new documentation"
+description: "Welcome to Heysheet — your central place for all documentation and guides"
 ---
 
-<img
-  className="block dark:hidden"
-  src="/images/hero-light.png"
-  alt="Hero Light"
-/>
+# Welcome to Heysheet
 
-<img
-  className="hidden dark:block"
-  src="/images/hero-dark.png"
-  alt="Hero Dark"
-/>
+**Heysheet** is the simplest way to build powerful forms and connect them directly to Google Sheets — without writing any code.
 
-## Setting up
+Whether you're capturing leads, collecting survey responses, or handling internal workflows, Heysheet ensures your data flows seamlessly into your Google Sheets in real-time.
 
-The first step to world-class documentation is setting up your editing environments.
+---
 
-<CardGroup cols={2}>
-  <Card title="Edit Your Docs" icon="pen-to-square" href="https://mintlify.com/docs/quickstart">
-    Get your docs set up locally for easy development
-  </Card>
-  <Card title="Preview Changes" icon="image" href="https://mintlify.com/docs/development">
-    Preview your changes before you push to make sure they're perfect
-  </Card>
-</CardGroup>
+<img style={{borderRadius: '0.5rem'}} src="/images/analytics-dashboard.png"/>
 
-## Make it yours
+## What you can do with Heysheet
 
-Update your docs to your brand and add valuable content for the best user conversion.
+- **Drag & Drop Form Builder** — Create fully customizable forms with an intuitive builder.
+- **Google Sheets Integration** — Form responses are synced instantly to your connected spreadsheet.
+- **Form Customization** — Personalize themes, branding, and UI to match your product or company.
+- **Alerts via Slack and Email** — Get notified when new submissions arrive (available on paid plans).
+- **File Uploads** — Allow users to submit files and access them directly via your linked Sheet (paid plans).
+- **API Access** — Programmatically send form data to a secure Heysheet endpoint from any frontend or backend.
+- **Public Form Links** — Share standalone form pages hosted by Heysheet.
+- **Submission Analytics** — Understand user behavior and track response trends with visual insights.
 
-<CardGroup cols={2}>
-  <Card title="Customize Style" icon="palette" href="https://mintlify.com/docs/settings/global">
-    Customize your docs to your company's colors and brands
-  </Card>
-  <Card title="Reference APIs" icon="code" href="https://mintlify.com/docs/api-playground/openapi">
-    Automatically generate endpoints from an OpenAPI spec
-  </Card>
-  <Card title="Add Components" icon="screwdriver-wrench" href="https://mintlify.com/docs/content/components/accordions">
-    Build interactive features and designs to guide your users
-  </Card>
-  <Card title="Get Inspiration" icon="stars" href="https://mintlify.com/customers">
-    Check out our showcase of our favorite documentation
-  </Card>
-</CardGroup>
+> Heysheet does **not store your form responses**. Submissions are sent directly to your linked Google Sheets for full transparency and control.
+
+---
+
+## What's in this documentation
+
+- **Getting Started** — How to create and publish your first form
+- **Core Features** — Deep dive into form building, syncing, and customization
+- **Plans & Limits** — Understand what each plan includes
+- **Help & Support** — Troubleshooting, common questions, and guidance
+
+---
+
+## Need help?
+
+Our team is here to support you.
+
+Email us anytime at [support@heysheet.app](mailto:support@heysheet.app) or visit [heysheet.app](https://heysheet.app) for more information.
