--- a/account/billing.mdx
+++ b/account/billing.mdx
@@ -1,5 +1,37 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Billing & Invoices"
+description: "Manage your Heysheet subscription and view invoices"
 ---
 
+Manage your plan, update payment methods, and download invoices directly from your dashboard.
+
+---
+
+##  How to Access Billing
+
+1. Go to your **Dashboard**
+2. Click on **Manage Plan**
+3. Choose your desired plan or view past invoices
+
+
+<img style={{borderRadius: '0.5rem'}} src="/images/manage-plan.png"/>
+
+---
+
+##  Upgrading or Downgrading
+
+- You can upgrade or downgrade anytime.
+- Changes are applied immediately, and prorated billing is handled automatically.
+
+---
+
+##  Support
+
+Have billing questions? Reach out via [support@heysheet.com](mailto:support@heysheet.com)
+
+---
+
+##  Related
+
+- [Plans Overview](/account/plans)
+- [Plan Limits](/account/limits)
