--- a/help/faq.mdx
+++ b/help/faq.mdx
@@ -1,5 +1,62 @@
 ---
-title: 'New file'
-description: 'Description of your new file.'
+title: "Frequently Asked Questions"
+description: "Answers to common questions about Heysheet"
 ---
 
+# ❓ FAQ
+
+---
+
+### 💡 What is Heysheet?
+
+Heysheet is a simple tool to build forms and sync submissions directly to Google Sheets — no coding needed.
+
+---
+
+### 📊 What plans are available?
+
+We offer Free, Starter, and Pro plans. Each has different limits and features.  
+Check out the [Plans Overview](../account/plans.md) for details.
+
+---
+
+### 🧾 How does billing work?
+
+Billing is monthly or yearly. You can upgrade or downgrade anytime via the dashboard.
+
+---
+
+### 🗃 Where is my data stored?
+
+All submission data is sent directly to your linked Google Sheet. We don’t store form responses on our servers for security and privacy reasons.
+
+---
+
+### 📁 Does it support file uploads?
+
+Yes — Starter and Pro plans support file uploads. Free plan does not.
+
+---
+
+### 🔒 Is Heysheet secure?
+
+Absolutely. We use OAuth to connect to your Google account securely. We do not access or store your credentials or sensitive data.
+
+---
+
+### 🔄 Can I export form data?
+
+Your data lives in your Google Sheets — so you can export, share, and analyze as you wish using Sheets’ native features.
+
+---
+
+### 💬 How do I contact support?
+
+You can reach us at [hi@heysheet.com](mailto:hi@heysheet.com) or use the **Support** link in the navigation bar.
+
+---
+
+### 📘 Related Pages
+
+- [Troubleshooting](./troubleshooting.md)
+- [Plans Overview](../account/plans.md)
