Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -11,7 +11,10 @@ Whether you're capturing leads, collecting survey responses, or handling interna
 
 ---
 
-<img style={{borderRadius: '0.5rem'}} src="/images/analytics-dashboard.png"/>
+<img
+  style={{ borderRadius:"0.5rem" }}
+  src="/images/analytics-dashboard.png"
+/>
 
 ## What you can do with Heysheet
 
@@ -41,4 +44,4 @@ Whether you're capturing leads, collecting survey responses, or handling interna
 
 Our team is here to support you.
 
-Email us anytime at [support@heysheet.app](mailto:support@heysheet.app) or visit [heysheet.app](https://heysheet.app) for more information.
+Email us anytime at [support@heysheet.in](support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more information.
