--- a/account/billing.mdx
+++ b/account/billing.mdx
@@ -27,7 +27,7 @@ Manage your plan, update payment methods, and download invoices directly from yo
 
 ##  Support
 
-Have billing questions? Reach out via [support@heysheet.com](mailto:support@heysheet.com)
+Have billing questions? Reach out via [support@heysheet.in](mailto:support@heysheet.in)
 
 ---
 
