--- a/getting-started/quickstart.mdx
+++ b/getting-started/quickstart.mdx
@@ -14,7 +14,7 @@ Heysheet provides an API-first workflow that makes it easy to push form submissi
 
 ### 1. Sign In
 
-Go to [heysheet.app](https://heysheet.app) and sign in with your Google account or email.
+Go to [heysheet.in](https://heysheet.in) and sign in with your Google account or email.
 
 <img style={{borderRadius: '0.5rem'}} src="/images/sign-in.png"/>
 
@@ -49,7 +49,7 @@ After creating the form, you’ll be redirected to the **form detail page**. Fro
 Send a `POST` request to the form endpoint with your data:
 
 ```javascript
-POST https://api.heysheet.app/submit/your-form-id
+POST https://api.heysheet.in/submit/your-form-id
 Content-Type: application/json
 
 {
