Documentation edits made through Mintlify web editor

--- a/index.mdx
+++ b/index.mdx
@@ -44,4 +44,4 @@ Whether you're capturing leads, collecting survey responses, or handling interna
 
 Our team is here to support you.
 
-Email us anytime at [support@heysheet.in](support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more information.
+Email us anytime at [support@heysheet.in](mailto:support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more information.
