docs: Improve SEO and add alt text to images

--- a/account/billing.mdx
+++ b/account/billing.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Billing & Invoices"
-description: "Manage your Heysheet subscription and view invoices"
+title: "Manage Your Heysheet Subscription and Invoices"
+description: "Learn how to manage your Heysheet subscription, update payment methods, and view your billing history and invoices."
 ---
 
 Manage your plan, update payment methods, and download invoices directly from your dashboard.
@@ -14,7 +14,7 @@ Manage your plan, update payment methods, and download invoices directly from yo
 3. Choose your desired plan or view past invoices
 
 
-<img style={{borderRadius: '0.5rem'}} src="/images/manage-plan.png"/>
+<img style={{borderRadius: '0.5rem'}} src="/images/manage-plan.png" alt="Manage Plan button in Heysheet dashboard"/>
 
 ---
 
