--- a/account/limits.mdx
+++ b/account/limits.mdx
@@ -1,6 +1,6 @@
 ---
-title: "Plan Limits"
-description: "Understand submission, form, and storage limits per plan"
+title: "Heysheet Plan Limits & Usage Quotas"
+description: "Explore the submission, form, and file storage limits for each Heysheet plan. Understand the usage quotas for the Free, Starter, and Pro plans."
 ---
 
 Each plan comes with specific limits to ensure fair use. Here's what you can expect:
