--- a/account/plans.mdx
+++ b/account/plans.mdx
@@ -3,32 +3,67 @@ title: "Plans Overview"
 description: "Explore Heysheet pricing plans and features"
 ---
 
-Heysheet offers flexible pricing designed to grow with you. Whether you're just starting or scaling, we have a plan to match your needs.
+Heysheet offers flexible pricing designed to grow with you — whether you're a solo builder or scaling a business.
 
 ---
 
-## Available Plans
+## 📦 Available Plans
 
-| Plan     | Price (Monthly) | Best For                 |
-|----------|------------------|--------------------------|
-| Free     | $0              | Getting started          |
-| Starter  | $9/mo           | Growing businesses       |
-| Pro      | $24/mo          | Teams & advanced users   |
-
----
-
-<img style={{borderRadius: '0.5rem'}} src="/images/pricing.png"/>
+| Plan   | Price (Monthly) | Best For                |
+|--------|------------------|--------------------------|
+| Free   | $0               | Getting started, testing ideas |
+| Starter | $8/mo           | Growing businesses, creators   |
 
 ---
 
-##  Recommended Plan
+## 🆓 Free Plan
 
-- **Starter Plan** is the most popular for creators and startups.
-- **Pro Plan** is ideal for teams, larger projects, and integrations.
+Perfect for individuals who are just getting started.
+
+**Includes:**
+- ✅ 1 Form
+- ✅ 100 Submissions/month
+- ✅ Drag & Drop Builder
+- ✅ Google Sheets Sync
+- ✅ Notion Integration
 
 ---
 
-##  Related
+## ⭐ Starter Plan (Most Popular)
 
-- [Plan Limits](/account/limits)
-- [Billing](/account/billing)
+Ideal for creators, small businesses, and startups ready to grow.
+
+**Includes:**
+- ✅ Unlimited Forms
+- ✅ 25,000 Submissions/month
+- ✅ Drag & Drop Builder (Coming soon)
+- ✅ Google Sheets Sync
+- ✅ Notion Integration
+- ✅ File Uploads
+- ✅ Slack & Email Alerts
+- ✅ Basic Analytics
+- ✅ Automatic Redirect
+- ✅ Domain Whitelisting
+
+---
+
+
+<img style={{borderRadius: '0.5rem', marginTop: '1rem'}} src="/images/pricing.png" alt="Heysheet Pricing Plans" />
+
+---
+
+## 🔎 Compare Plans
+
+| Feature                | Free         | Starter       |
+|------------------------|--------------|---------------|
+| Forms                 | 1            | Unlimited     |
+| Submissions           | 100/mo       | 25,000/mo     |
+| File Uploads          | ❌           | ✅             |
+| Google Sheets Sync    | ✅           | ✅             |
+| Notion Integration    | ✅           | ✅             |
+| Email & Slack Alerts  | ❌           | ✅             |
+| Domain Whitelisting   | ❌           | ✅             |
+| Analytics             | ❌           | ✅             |
+
+---
+
