--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Introduction'
-description: 'Example section for showcasing API endpoints'
+title: "Heysheet API Reference Introduction"
+description: "Get started with the Heysheet API. Learn about authentication, endpoints, and how to use our API to supercharge your forms."
 ---
 
 <Note>
