--- a/essentials/code.mdx
+++ b/essentials/code.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Code Blocks'
-description: 'Display inline code and code blocks'
+title: "How to Use Code Blocks in Heysheet Docs"
+description: "Learn how to display inline code and code blocks with syntax highlighting in your Heysheet documentation. A guide for developers."
 icon: 'code'
 ---
 
