--- a/essentials/images.mdx
+++ b/essentials/images.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Images and Embeds'
-description: 'Add image, video, and other HTML elements'
+title: "Adding Images, Videos, and Embeds to Your Docs"
+description: "Learn how to add images, videos, and other HTML elements to your Heysheet documentation using Markdown and embeds."
 icon: 'image'
 ---
 
