--- a/features/analytics.mdx
+++ b/features/analytics.mdx
@@ -4,20 +4,27 @@ description: "Track form submission trends and performance"
 ---
 
 
-See how your forms are performing with built-in basic analytics.
+HeySheet gives you built-in analytics to help you understand how your forms are performing — without any third-party setup.
 
 ---
 
-##  What You Can Track
+## ✅ What You Can Track
 
-- Total submissions
-- Daily submission trends
+- **Total Submissions**: Overall count of submissions received across all forms.
+- **Active Forms**: Number of currently active forms receiving submissions.
+- **Top Forms by Submissions**: See which forms are getting the most engagement.
+- **Submission Trends**: View submission activity over time in a clean, visual graph.
+- **Browser & Device Usage**: Know what platforms your audience is using.
+- **Geographic Insights**: Track which countries your submissions are coming from.
 
-<img style={{borderRadius: '0.5rem'}} src="/images/analytics-dashboard.png"/>
 ---
 
+## 📈 Dashboard Preview
 
+Here’s what the analytics dashboard looks like in action:
 
-##  Related
+<img style={{ borderRadius: '0.5rem', marginTop: '1rem' }} src="https://ik.imagekit.io/q3ksr5fk3/image.png?updatedAt=1753434866415" alt="HeySheet Analytics Dashboard" />
 
-- [Plans & Limits](../account/limits.md)
+---
+
+Still have questions? Head over to the [FAQ](/docs/faq) or reach out to us on Twitter [@heysheet](https://twitter.com/heysheet).
