--- a/features/file-uploads.mdx
+++ b/features/file-uploads.mdx
@@ -15,7 +15,7 @@ Let users submit images, documents, or any file formats through your forms.
 4. Configure the max number of files
 5. Click on save
 
-<img style={{borderRadius: '0.5rem'}} src="/images/file-upload-settings.png"/>
+<img style={{borderRadius: '0.5rem'}} src="/images/file-upload-settings.png" alt="File upload settings in Heysheet"/>
 
 Now there are two ways you can accept files by no code form builder or via code. 
 
@@ -32,26 +32,6 @@ Send the file as form data with key as you want to store like "resume". It will 
 </form>
 ```
 
-or via form builder
-
-<img style={{borderRadius: '0.5rem'}} src="/images/file-upload-field.png"/>
-
-1. From form component search for file upload
-2. Drag and drop the file upload component into canvas
-3. Click on the file upload component to edit the settings
-4. **Name** Will be the key of the file that will be stored in the spreadsheet if the name is "url" it will store the file url in the "url" column.
-5. **Max File Size** is the max size of the file that can be uploaded
-6. Toggle **Required** to make the field required
----
-
-##  Storage Limits
-
-| Plan    | Max File Size | Total Files |
-|---------|---------------|-------------|
-| Free    | Not available | -           |
-| Starter | 50 MB         | Unlimited   |
-| Pro     | 100 MB        | Unlimited   |
-
 ---
 
 ## ️ Privacy & Security
@@ -61,6 +41,3 @@ or via form builder
 
 ---
 
-## Related
-
-- [Plans & Limits](../account/limits.md)
