--- a/help/faq.mdx
+++ b/help/faq.mdx
@@ -3,9 +3,6 @@ title: "Frequently Asked Questions"
 description: "Answers to common questions about Heysheet"
 ---
 
-# ❓ FAQ
-
----
 
 ### 💡 What is Heysheet?
 
@@ -52,11 +49,6 @@ Your data lives in your Google Sheets — so you can export, share, and analyze 
 
 ### 💬 How do I contact support?
 
-You can reach us at [hi@heysheet.com](mailto:hi@heysheet.com) or use the **Support** link in the navigation bar.
+You can reach us at [support@heysheet.com](mailto:support@heysheet.com) or use the **Support** link in the navigation bar.
 
 ---
-
-### 📘 Related Pages
-
-- [Troubleshooting](./troubleshooting.md)
-- [Plans Overview](../account/plans.md)
