--- a/help/troubleshooting.mdx
+++ b/help/troubleshooting.mdx
@@ -49,6 +49,8 @@ If you hit your submission limit:
 
 📸 **Screenshot:** `submission-limit-reached.png`
 
+<img src="/images/Pasted image.png" alt="Submission Limit Reached in Heysheet"/>
+
 ---
 
 ## 5. Styling looks broken?
