--- a/index.mdx
+++ b/index.mdx
@@ -1,47 +1,50 @@
 ---
 title: "Introduction"
-description: "Welcome to Heysheet — your central place for all documentation and guides"
+description: "Welcome to Heysheet — your central place for all developer documentation and guides"
 ---
 
 # Welcome to Heysheet
 
-**Heysheet** is the simplest way to build powerful forms and connect them directly to Google Sheets — without writing any code.
+**Heysheet** is the fastest way for developers to collect form submissions and send them directly to Google Sheets — with zero backend setup.
 
-Whether you're capturing leads, collecting survey responses, or handling internal workflows, Heysheet ensures your data flows seamlessly into your Google Sheets in real-time.
+Designed with simplicity and speed in mind, Heysheet lets you wire up frontend forms to Google Sheets in minutes using a secure API endpoint.
+
+Whether you're launching a marketing site, collecting leads, or building internal tools, Heysheet ensures your data lands instantly in your connected Sheet.
+
+<video autoPlay playsInline loop controls style={{ borderRadius: '0.5rem', width: '100%', marginTop: '1rem' }}>
+<source src="https://ik.imagekit.io/q3ksr5fk3/M_s%20video(3).mp4?updatedAt=1753415689177" type="video/mp4" />
+Your browser does not support the video tag.
+</video>
+
+## Why developers use Heysheet
+
+- **Google Sheets Integration** — Instantly sync form data to any connected spreadsheet.
+- **No Backend Required** — Just call our API from your frontend — we handle the rest.
+- **Custom Frontends** — Use any tech stack (React, Vue, plain HTML, etc.) to build your form UI.
+- **Webhook-style Workflow** — Connect Heysheet to your Sheet like a serverless form handler.
+- **File Uploads** — Accept and store user-uploaded files (paid plans).
+- **Slack & Email Alerts** — Get notified instantly on new form submissions (paid plans).
+- **Secure API** — Each form has a unique, secure endpoint with spam protection.
+- **Submission Analytics** — Visual insights to track submissions and user behavior.
+
+> ⚠️ Heysheet does **not store form responses**. Submissions go directly to your linked Google Sheet for full control and transparency.
 
 ---
 
-<img
-  style={{ borderRadius:"0.5rem" }}
-  src="/images/analytics-dashboard.png"
-/>
+## What’s in this documentation
 
-## What you can do with Heysheet
-
-- **Drag & Drop Form Builder** — Create fully customizable forms with an intuitive builder.
-- **Google Sheets Integration** — Form responses are synced instantly to your connected spreadsheet.
-- **Form Customization** — Personalize themes, branding, and UI to match your product or company.
-- **Alerts via Slack and Email** — Get notified when new submissions arrive (available on paid plans).
-- **File Uploads** — Allow users to submit files and access them directly via your linked Sheet (paid plans).
-- **API Access** — Programmatically send form data to a secure Heysheet endpoint from any frontend or backend.
-- **Public Form Links** — Share standalone form pages hosted by Heysheet.
-- **Submission Analytics** — Understand user behavior and track response trends with visual insights.
-
-> Heysheet does **not store your form responses**. Submissions are sent directly to your linked Google Sheets for full transparency and control.
-
----
-
-## What's in this documentation
-
-- **Getting Started** — How to create and publish your first form
-- **Core Features** — Deep dive into form building, syncing, and customization
-- **Plans & Limits** — Understand what each plan includes
-- **Help & Support** — Troubleshooting, common questions, and guidance
+- **Getting Started** — How to connect a Google Sheet and use the API
+- **API Reference** — Learn how to send data, upload files, and manage endpoints
+- **Authentication & Security** — Protect your form from spam and abuse
+- **Limits & Plans** — Understand the quota and features per plan
+- **Troubleshooting** — Fix common issues quickly
 
 ---
 
 ## Need help?
 
-Our team is here to support you.
+We’re here to support you.
 
-Email us anytime at [support@heysheet.in](mailto:support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more information.
+Email us anytime at [support@heysheet.in](mailto:support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more info.
+
+Email us anytime at [support@heysheet.in](support@heysheet.in) or visit [heysheet.in](https://heysheet.in) for more information.
