--- a/development.mdx
+++ b/development.mdx
@@ -1,6 +1,6 @@
 ---
-title: 'Development'
-description: 'Preview changes locally to update your docs'
+title: "Local Development & Previewing Changes"
+description: "Learn how to set up your local development environment, preview changes to your Heysheet documentation, and troubleshoot common issues."
 ---
 
 <Info>
@@ -80,7 +80,7 @@ mintlify broken-links
 If the deployment is successful, you should see the following:
 
 <Frame>
-  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} />
+  <img src="/images/checks-passed.png" style={{ borderRadius: '0.5rem' }} alt="Checks passed for deployment"/>
 </Frame>
 
 ## Code Formatting
