--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -1,97 +1,117 @@
 ---
 title: 'Quickstart'
-description: 'Start building awesome documentation in under 5 minutes'
+description: 'Start collecting form submissions with Heysheet in under 5 minutes'
 ---
 
-## Setup your development
+## Get started with Heysheet
 
-Learn how to update your docs locally and deploy them to the public.
+Heysheet lets developers send form submissions directly to Google Sheets using a simple API — no backend needed.
 
-### Edit and preview
+This quickstart will walk you through:
+
+1. Connecting your Google Sheet  
+2. Sending a form submission  
+3. Previewing data in your Sheet
+
+---
+
+## 1. Connect your Google Sheet
+
+To begin:
 
 <AccordionGroup>
-  <Accordion icon="github" title="Clone your docs locally">
-    During the onboarding process, we created a repository on your Github with
-    your docs content. You can find this repository on our
-    [dashboard](https://dashboard.mintlify.com). To clone the repository
-    locally, follow these
-    [instructions](https://docs.github.com/en/repositories/creating-and-managing-repositories/cloning-a-repository)
-    in your terminal.
+  <Accordion icon="google-sheets" title="Authorize Google Sheets">
+    Head over to your [Heysheet Dashboard](https://heysheet.in/dashboard) and connect your Google account.  
+    Select the spreadsheet you want to use to collect responses.
+    
+    > ✅ Heysheet will ask for minimal permissions and only needs access to the sheet(s) you select.
   </Accordion>
-  <Accordion icon="rectangle-terminal" title="Preview changes">
-    Previewing helps you make sure your changes look as intended. We built a
-    command line interface to render these changes locally. 
-    1. Install the
-    [Mintlify CLI](https://www.npmjs.com/package/mintlify) to preview the
-    documentation changes locally with this command: ``` npm i -g mintlify ```
-    2. Run the following command at the root of your documentation (where
-    `docs.json` is): ``` mintlify dev ```
-    <Note>
-      If you’re currently using the legacy ```mint.json``` configuration file, please update the Mintlify CLI:
 
-
-      ```npm i -g mintlify@latest```
-      And run the new upgrade command in your docs repository:
-
-      ```mintlify upgrade```
-      You should now be using the new ```docs.json``` configuration file. Feel free to delete the ```mint.json``` file from your repository.
-    </Note>
+  <Accordion icon="table" title="Map your sheet columns">
+    Once connected, Heysheet will let you map form fields to your sheet's column headers.  
+    This determines where each submitted value will be stored.
   </Accordion>
 </AccordionGroup>
 
-### Deploy your changes
+---
+
+## 2. Send your first submission
+
+You can now start sending data to your sheet using the generated API endpoint.
 
 <AccordionGroup>
+  <Accordion icon="code" title="Send a POST request">
+    Here's a sample `fetch` request to submit form data:
 
-<Accordion icon="message-bot" title="Install our Github app">
-  Our Github app automatically deploys your changes to your docs site, so you
-  don't need to manage deployments yourself. You can find the link to install on
-  your [dashboard](https://dashboard.mintlify.com). Once the bot has been
-  successfully installed, there should be a check mark next to the commit hash
-  of the repo.
-</Accordion>
-<Accordion icon="rocket" title="Push your changes">
-  [Commit and push your changes to
-  Git](https://docs.github.com/en/get-started/using-git/pushing-commits-to-a-remote-repository#about-git-push)
-  for your changes to update in your docs site. If you push and don't see that
-  the Github app successfully deployed your changes, you can also manually
-  update your docs through our [dashboard](https://dashboard.mintlify.com).
-</Accordion>
+    ```ts
+    await fetch("https://api.heysheet.in/forms/your-form-id", {
+      method: "POST",
+      headers: {
+        "Content-Type": "application/json",
+      },
+      body: JSON.stringify({
+        name: "John Doe",
+        email: "john@example.com",
+        message: "Hey, this is my submission!"
+      }),
+    });
+    ```
 
+    You can also use `curl` or any HTTP client (like Axios, SuperAgent, etc).
+  </Accordion>
+
+  <Accordion icon="shield-check" title="Secure your endpoint">
+    - Each endpoint is rate-limited and protected from abuse.
+    - For added security, you can enable CAPTCHA and domain whitelisting in the dashboard.
+  </Accordion>
 </AccordionGroup>
 
-## Update your docs
+---
 
-Add content directly in your files with MDX syntax and React components. You can use any of our components, or even build your own.
+## 3. View responses in your Sheet
+
+Once the form is submitted, data will appear instantly in your connected Google Sheet.
+
+> 📌 No need to refresh — it updates in real-time.
+
+---
+
+## What's next?
+
+Update your docs or integration with more advanced features.
 
 <CardGroup>
 
-<Card title="Add Content With MDX" icon="file" href="/essentials/markdown">
-  Add content to your docs with MDX syntax.
-</Card>
+  <Card
+    title="Upload Files"
+    icon="upload"
+    href="/features/file-upload"
+  >
+    Accept file uploads and link them directly in your Sheet.
+  </Card>
 
-<Card
-  title="Add Code Blocks"
-  icon="square-code"
-  href="/essentials/code"
->
-  Add code directly to your docs with syntax highlighting.
-</Card>
+  <Card
+    title="Get Alerts on Submissions"
+    icon="bell"
+    href="/features/alerts"
+  >
+    Set up email or Slack notifications for new submissions.
+  </Card>
 
-<Card
-  title="Add Images"
-  icon="image"
-  href="/essentials/images"
->
-  Add images to your docs to make them more engaging.
-</Card>
+  <Card
+    title="Use with React or HTML"
+    icon="brackets"
+    href="/guides/react-integration"
+  >
+    Learn how to use Heysheet with your frontend framework.
+  </Card>
 
-<Card
-  title="Add Custom Components"
-  icon="puzzle-piece"
-  href="/essentials/reusable-snippets"
->
-  Add templates to your docs to make them more reusable.
-</Card>
+  <Card
+    title="Enable Spam Protection"
+    icon="bug"
+    href="/guides/security"
+  >
+    Prevent spam with CAPTCHA and domain restrictions.
+  </Card>
 
 </CardGroup>
